--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           </div>
         </div>
       </div>
+      <div class="nav-spacer">
+        :)
+      </div>
     </div>
   </section>
 
